--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -90,7 +90,7 @@
               <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
               </svg>
-              {{ todo.deadline.toDate ? todo.deadline.toDate().toLocaleString() : todo.deadline }}
+              {{ getDeadlineString(todo.deadline) }}
             </span>
             
             <span *ngIf="todo.completed" class="text-green-600 dark:text-green-400">
